* Fixed: Change tooltip z-index to be on top of other page elements.
git-svn-id: https://aux1.edublogs.org/repos/incsub/branches/plugins/membership/4.0@14872 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/app/assets/css/ms-tooltip.css
+++ b/app/assets/css/ms-tooltip.css
@@ -53,4 +53,5 @@
 	display:inline;
 	position: relative;
 	top: -2px;
+	z-index: 100;
 }
